k8s/apps/local/shared/base/utilities/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: zoidbot
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging-dns
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: grafana-auth
    nginx.ingress.kubernetes.io/auth-realm: "Grafana Access"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - grafana.zoidbot.online
      secretName: grafana-tls
  rules:
    - host: grafana.zoidbot.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 3000
